--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,18 @@
 <body class="container">
     <h1 class="text-center">Notas Fiscais</h1>
     <div class="text-center">
-        <button id="myButton" class="btn btn-primary">Buscar</button>
+        <button id="myButton" class="btn btn-primary" onclick="() =>
+            fetch('http://localhost:3000/notas')
+            .then(res => {
+                if(!res.ok){
+                    alert('aaa')
+                }
+                return res.json()
+            })
+            .then(notas => document.getElementById('resultado').innerHTML = notas)
+            .catch(console.error);
+            ">Buscar</button>
+        <div id="resultado"></div>
     </div>
-    <script type="module", src="app\app.js"></script>
 </body>
 </html>
